<resources>
    <string name="app_name">Foody Shop</string>

    <string name="menu_home">Home</string>
    <string name="menu_sale">Giảm giá</string>
    <string name="menu_order">Đơn hàng</string>
    <string name="menu_favorite">Yêu thích</string>
    <string name="menu_account">Tài khoản</string>
    <string name="title_topic">Danh mục sản phẩm</string>
    <string name="filter">Lọc</string>
    <string name="on_sale">Đang giảm giá</string>
    <string name="search">Search</string>


    <string name="hint_phone">Phone</string>
    <string name="hint_fullname">Full name</string>
    <string name="hint_address">Address</string>
    <string name="hint_note">Note</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="button_sign_in">Sign in</string>
    <string name="button_sign_up">Sign up</string>
    <string name="button_change_password">Change password</string>
    <string name="button_next">Next</string>
    <string name="button_verify">Verify</string>
    <string name="button_send_otp">Send OTP</string>
    <string name="text_forgot_password">Forgot password?</string>
    <string name="text_signin_message">Hello, sign in to your account</string>
    <string name="text_signin_signup">Don\'t have an account? <b>Sign up</b></string>
    <string name="text_signup_terms">By signing up, you agree to our <b>terms and conditions</b></string>
    <string name="text_signup_message">Hello, let\'s set up your account</string>

    <string name="text_forgot_password_title">Forgot password? No worries</string>
    <string name="text_forgot_password_message">We will send you a OTP to reset your password</string>

    <string name="product_detail">Chi tiết sản phẩm</string>
    <string name="product_name">Ba rọi heo khay 500g</string>
    <string name="product_price_sale">đ169.000</string>
    <string name="product_price">đ320.000</string>
    <string name="product_discount">33%</string>
    <string name="decrease">GIẢM</string>
    <string name="introduce_product">Giới thiệu sản phẩm</string>
    <string name="description_product">Ba rọi heo của thương hiệu CP đạt các tiêu chuẩn về an toàn thực phẩm, đảm bảo chất lượng, độ tươi ngon. Thịt heo mềm, vân nạc, mỡ rõ ràng nên rất phù hợp làm nguyên liệu để nấu thịt kho hột vịt, thịt nướng BBQ.</string>
    <string name="feedback_title">Đánh giá sản phẩm</string>
    <string name="total_feedback">({0} đánh giá)</string>
    <string name="no_have_feedback">(Chưa có đánh giá)</string>
    <string name="add_feedback">Thêm đánh giá</string>
    <string name="hind_feedback">Đánh giá về sản phẩm</string>
    <string name="add_to_cart">Thêm giỏ hàng</string>
    <string name="buy_now">Mua ngay</string>
    <string name="send_feedback">Gửi</string>
    <string name="delete_feedback">Xóa đánh giá</string>
    <string name="edit_feedback">Sửa đánh giá</string>
    <string name="see_more_feedback">Xem thêm {0} đánh giá</string>
    <string name="see_more_product">Xem thêm {0} sản phẩm</string>

    <string name="add_feed_success">Thêm đánh giá thành công</string>

    <string name="edit">Chỉnh sửa</string>
    <string name="delete">Xóa</string>
    <string name="confirm">Xác nhận</string>
    <string name="cancel">Hủy</string>
    <string name="close">Đóng</string>
    <string name="backs">Quay lại</string>

    <string name="change_password_success">Đổi mật khẩu thành công!</string>
    <string name="ok">OK</string>

    <string name="otp_verification">OTP Verification</string>
    <string name="enter_your_new_password">Enter password to complete</string>
    <string name="pass_description">A password has minimum eight characters, at least one letter and one number.</string>

    <string name="cart">Giỏ hàng</string>
    <string name="order">Đơn hàng</string>
    <string name="order_detail">Chi tiết đơn hàng</string>
    <string name="discount">{0}%</string>
    <string name="total_buy">Mua hàng ({0})</string>

    <string name="info_receive_order">Thông tin nhận hàng</string>
    <string name="list_product">Danh sách sản phẩm</string>
    <string name="total_money">Tổng tiền</string>
    <string name="ordering">Đặt hàng</string>

    <string name="full_name"><![CDATA[Họ & tên]]></string>
    <string name="address">Địa chỉ</string>
    <string name="phone">Số điện thoại</string>
    <string name="password">Mật khẩu</string>
    <string name="name">Tên</string>
    <string name="gender">Giới tính</string>
    <string name="date_birth">Ngày sinh</string>
    <string name="note">Lưu ý</string>
    <string name="order_code">Mã đơn hàng</string>
    <string name="order_info">Thông tin đơn hàng</string>
    <string name="order_success">Đã đặt hàng thành công!</string>
    <string name="sub_order_success">Cảm ơn bạn đã đặt hàng tại shop!</string>
    <string name="code">Mã: {0}</string>
    <string name="total_product">{0} sản phẩm</string>
    <string name="order_date">Đặt ngày</string>
    <string name="ship_price">Giá ship: </string>
    <string name="into_money">Thành tiền:</string>
    <string name="cancel_order">Hủy đơn</string>
    <string name="buy_again">Mua lại</string>
    <string name="feedback_rule">Bài đánh giá chỉ được thay đổi trong <b>30 phút</b> tính từ khi tạo</string>
    <string name="feedback_timer">Hết hạn thay đổi trong <b>{0}</b> phút</string>
    <string name="feedback_timer_finish">Hết hạn thay đổi</string>

    <string name="card_my_account">Thiết lập tài khoản</string>
    <string name="card_notification">Thông báo</string>
    <string name="card_setting">Cài đặt</string>
    <string name="card_help_center">Trung tâm trợ giúp</string>
    <string name="card_logout">Đăng xuất</string>
    <string name="card_login">Đăng nhập</string>
    <string name="guest_user">Guest User</string>

    <string name="show_avatar">Xem ảnh đại diện</string>
    <string name="change_avatar">Thay đổi đại diện</string>
    <string name="close_bottom_sheet">Hủy</string>
    <string name="edit_name">Sửa tên</string>
    <string name="edit_address">Sửa địa chỉ</string>
    <string name="change_password">Đổi mật khẩu</string>
    <string name="current_password">Nhập mật khẩu hiện tại</string>
    <string name="enter_new_password">Nhập mật khẩu mới</string>
    <string name="reenter_new_password">Nhập lại mật khẩu mới</string>
    <string name="save">Lưu</string>
    <string name="male">Nam</string>
    <string name="female">Nữ</string>
    <string name="other">Khác</string>

    <string name="normal">Normal</string>
    <string name="asc">Asc</string>
    <string name="desc">Desc</string>
    <string name="apply">Apply</string>
    <string name="clear">Clear</string>

    <string name="result_for">Kết quả search cho <b>\"{0}\"</b></string>
    <string name="show_all">Xem tất cả</string>
    <string name="no_result_for">Không tìm thấy kết quả \nkhớp với <b>\"{0}\"</b></string>

    <string name="start">start</string>
    <string name="skip">Skip</string>
    <string name="finish">finish</string>
    <string name="next">next</string>
    <string name="back">back</string>

    <!-- onboard screen   -->
    <string name="title_onboarding_1">Welcome to Foody Shop !</string>
    <string name="description_onboarding_1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum placeat minus a odio sed esse nesciunt ipsam recusandae, cupiditate minima. Obcaecati iure ducimus ea esse inventore unde iste voluptates aliquid.</string>
    <!--    <string name="description_onboarding_1">Here is an open-source project which shows sweet &amp; original onboarding ViewPagers that follows Material Design Guidelines</string>-->

    <string name="title_onboarding_2">Easy ordering</string>
    <!--    <string name="description_onboarding_2">Our mission is to make useful &amp; subtle apps. We love help people to save time with open-source stuffs, but we also make life easier by creating new things. Good Coding!</string>-->
    <string name="description_onboarding_2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum placeat minus a odio sed esse nesciunt ipsam recusandae, cupiditate minima. Obcaecati iure ducimus ea esse inventore unde iste voluptates aliquid.</string>

    <string name="title_onboarding_3">Guaranteed quick delivery</string>
    <!--    <string name="description_onboarding_3">We use Lottie Animations on our Intro to make it interactive &amp; pleasant. Did you already tried it ? If no, let\'s start now. It\'s just awesome</string>-->
    <string name="description_onboarding_3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum placeat minus a odio sed esse nesciunt ipsam recusandae, cupiditate minima. Obcaecati iure ducimus ea esse inventore unde iste voluptates aliquid.</string>

</resources>