<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingBottom="@dimen/space_view">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:text="@string/gender"
        android:textAlignment="center"
        android:textColor="@color/colorTextPrimary"
        android:textSize="17sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/md_grey_300" />

    <TextView
        android:id="@+id/tv_male"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ripple_white"
        android:padding="12dp"
        android:text="@string/male"
        android:textColor="@color/md_grey_600"
        android:textSize="16sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/md_grey_300" />

    <TextView
        android:id="@+id/tv_female"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ripple_white"
        android:padding="12dp"
        android:text="@string/female"
        android:textColor="@color/md_grey_600"
        android:textSize="16sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/md_grey_300" />

    <TextView
        android:id="@+id/tv_other"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:background="@drawable/ripple_white"
        android:text="@string/other"
        android:textColor="@color/md_grey_600"
        android:textSize="16sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/md_grey_300" />
</LinearLayout>