<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/item_product_width"
    android:layout_height="wrap_content"
    android:layout_marginEnd="@dimen/space_view">

    <ImageView
        android:id="@+id/img_product"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_product_width"
        android:src="@drawable/test_product_icon"
        tools:ignore="ContentDescription" />

    <RelativeLayout
        android:id="@+id/rl_sale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        tools:ignore="RelativeOverlap">

        <ImageView
            android:layout_width="42dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_banner"
            app:tint="#FADA40"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_discount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="4dp"
            android:text="@string/product_discount"
            android:textColor="#FF0303"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_discount"
            android:layout_centerHorizontal="true"
            android:text="@string/decrease"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_product"
        android:background="@color/white"
        android:padding="4dp">

        <TextView
            android:id="@+id/tv_product_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/product_name"
            android:textColor="@color/colorTextPrimary" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_product_name"
            android:layout_marginBottom="@dimen/space_view">

            <TextView
                android:id="@+id/tv_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/space_view"
                android:text="@string/product_price"
                android:textColor="@color/colorTextSecond"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/tv_price_sale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_price_sale"
                android:textColor="@color/colorTextPrice"
                android:textSize="15sp" />
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
