<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/custom_bg_white_corn_16"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/custom_bg__yellow_corn_topleft_16_topright_16">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="@dimen/space_view"
            android:layout_marginBottom="@dimen/space_view"
            android:text="@string/feedback_title"
            android:textColor="@color/colorTextPrimary"
            android:textSize="18sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <EditText
        android:id="@+id/edt_feedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:background="@drawable/custom_bg_white_stroke_purple_corn_8"
        android:gravity="start"
        android:hint="@string/hind_feedback"
        android:maxLength="255"
        android:maxLines="8"
        android:minLines="6"
        android:padding="12dp"
        android:textColor="@color/colorTextPrimary"
        android:textColorHint="@color/colorTextSecond"
        android:textSize="16sp"
        tools:ignore="Autofill,TextFields" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:weightSum="10">

        <Button
            android:id="@+id/btn_cancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="46dp"
            android:layout_marginEnd="@dimen/space_view"
            android:layout_weight="4.5"
            android:background="@drawable/ripple_red_corn_8"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15sp"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/btn_send_feedback"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="46dp"
            android:layout_marginStart="@dimen/space_view"
            android:layout_weight="5.5"
            android:background="@drawable/ripple_blue_corn_8"
            android:text="@string/send_feedback"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15sp"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>
</LinearLayout>

